refactor. Исправления по замечаниям.